--- a/plat/arm/board/tc/fdts/tc_spmc_manifest.dtsi
+++ b/plat/arm/board/tc/fdts/tc_spmc_manifest.dtsi
@@ -96,7 +96,11 @@
 
 	memory@1 {
 		device_type = "ns-memory";
-		reg = <0x0 0x80000000 0x0 0x79000000>,
+		reg =
+#ifdef TS_SP_FW_CONFIG
+		      <0x0 0x08000000 0x0 0x4000000>,
+#endif /* TS_SP_FW_CONFIG */
+		      <0x0 0x80000000 0x0 0x79000000>,
 		      <0x80 0x80000000 0x1 0x80000000>;
 	};
 };
