--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,6 +6,8 @@
 #
 alabaster==0.7.12
     # via sphinx
+attrs==21.2.0
+    # via markdown-it-py
 babel==2.9.1
     # via sphinx
 certifi==2021.5.30
@@ -16,6 +18,7 @@ click==8.0.1
     # via pip-tools
 docutils==0.16
     # via
+    #   myst-parser
     #   sphinx
     #   sphinx-rtd-theme
 idna==3.2
@@ -23,9 +26,19 @@ idna==3.2
 imagesize==1.2.0
     # via sphinx
 jinja2==3.0.1
-    # via sphinx
+    # via
+    #   myst-parser
+    #   sphinx
+markdown-it-py==1.1.0
+    # via
+    #   mdit-py-plugins
+    #   myst-parser
 markupsafe==2.0.1
     # via jinja2
+mdit-py-plugins==0.2.8
+    # via myst-parser
+myst-parser==0.15.2
+    # via -r requirements.in
 packaging==21.0
     # via sphinx
 pep517==0.11.0
@@ -38,6 +51,8 @@ pyparsing==2.4.7
     # via packaging
 pytz==2021.1
     # via babel
+pyyaml==6.0
+    # via myst-parser
 requests==2.26.0
     # via sphinx
 snowballstemmer==2.1.0
@@ -45,6 +60,7 @@ snowballstemmer==2.1.0
 sphinx==4.2.0
     # via
     #   -r requirements.in
+    #   myst-parser
     #   sphinx-rtd-theme
     #   sphinxcontrib-plantuml
 sphinx-rtd-theme==1.0.0
