--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,25 +8,27 @@ alabaster==0.7.12
     # via sphinx
 babel==2.9.1
     # via sphinx
-certifi==2021.10.8
+certifi==2021.5.30
     # via requests
-charset-normalizer==2.0.7
+charset-normalizer==2.0.4
     # via requests
-click==8.0.3
+click==8.0.1
     # via pip-tools
-docutils==0.18
-    # via sphinx
-idna==3.3
+docutils==0.16
+    # via
+    #   sphinx
+    #   sphinx-rtd-theme
+idna==3.2
     # via requests
-imagesize==1.3.0
+imagesize==1.2.0
     # via sphinx
-jinja2==3.0.3
+jinja2==3.0.1
     # via sphinx
 markupsafe==2.0.1
     # via jinja2
-packaging==21.2
+packaging==21.0
     # via sphinx
-pep517==0.12.0
+pep517==0.11.0
     # via pip-tools
 pip-tools==6.4.0
     # via -r requirements.in
@@ -34,18 +36,18 @@ pygments==2.10.0
     # via sphinx
 pyparsing==2.4.7
     # via packaging
-pytz==2021.3
+pytz==2021.1
     # via babel
 requests==2.26.0
     # via sphinx
 snowballstemmer==2.1.0
     # via sphinx
-sphinx==2.0.0
+sphinx==4.2.0
     # via
     #   -r requirements.in
     #   sphinx-rtd-theme
     #   sphinxcontrib-plantuml
-sphinx-rtd-theme==0.4.3
+sphinx-rtd-theme==1.0.0
     # via -r requirements.in
 sphinxcontrib-applehelp==1.0.2
     # via sphinx
@@ -55,15 +57,15 @@ sphinxcontrib-htmlhelp==2.0.0
     # via sphinx
 sphinxcontrib-jsmath==1.0.1
     # via sphinx
-sphinxcontrib-plantuml==0.15
+sphinxcontrib-plantuml==0.22
     # via -r requirements.in
 sphinxcontrib-qthelp==1.0.3
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
-tomli==1.2.2
+tomli==1.2.1
     # via pep517
-urllib3==1.26.7
+urllib3==1.26.6
     # via requests
 wheel==0.37.0
     # via pip-tools
