WIP: Add EL0 cactus to FVP.
Change-Id: I5bbed409e15221cd4a23c56b5a5a420254f82ca2

--- a/plat/arm/board/fvp/fdts/fvp_spmc_manifest.dts
+++ b/plat/arm/board/fvp/fdts/fvp_spmc_manifest.dts
@@ -57,6 +57,13 @@
 			vcpu_count = <1>;
 			mem_size = <1048576>;
 		};
+		vm5 {
+			is_ffa_partition;
+			debug_name = "cactus_el0";
+			load_address = <0x7800000>;
+			vcpu_count = <1>;
+			mem_size = <1048576>;
+		};
 	};
 
 	cpus {
