--- a/plat/arm/board/fvp/fdts/fvp_tb_fw_config.dts
+++ b/plat/arm/board/fvp/fdts/fvp_tb_fw_config.dts
@@ -96,6 +96,12 @@
 			load-address = <0x7600000>;
 			owner = "Plat";
 		};
+
+		cactus_el0 {
+			uuid = "b4b5672e-4a90-4fe1-b81f-fb13dae1dacb";
+			load-address = <0x7800000>;
+			owner = "Plat";
+		};
 #endif
 #endif /* ARM_BL2_SP_LIST_DTS */
 	};
