--- a/changelog.yaml
+++ b/changelog.yaml
@@ -579,6 +579,9 @@ subsections:
           - title: SPM MM
             scope: spm-mm
 
+      - title: DRTM
+        scope: drtm
+
   - title: Libraries
 
     subsections:
