--- a/changelog.yaml
+++ b/changelog.yaml
@@ -576,6 +576,9 @@ subsections:
           - title: SPM MM
             scope: spm-mm
 
+      - title: DRTM
+        scope: drtm
+
   - title: Libraries
 
     subsections:
