--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,9 @@ pip-tools = "^6.4.0"
 
 [tool.poetry.group.ci.dependencies]
 click = "^8.1.3"
+
+[tool.poetry.group.tools.dependencies]
+pyelftools = "^0.29"
+anytree = "^2.8.0"
+click = "^8.1.3"
+prettytable = "^3.5.0"
