--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1263,6 +1263,9 @@ subsections:
       - title: Certificate Creation Tool
         scope: cert-create
 
+      - title: Memory Mapping Tool
+        scope: memmap
+
         deprecated:
           - cert_create
 
