feat: define memory ranges for tc platform
In [1] we missed to update the SPMC manifest for the
TC platform, managing OPTEE as an SP.

[1] https://review.trustedfirmware.org/c/TF-A/trusted-firmware-a/+/20107

Signed-off-by: J-Alves <joao.alves@arm.com>
Change-Id: I68c2e0da6e63216c827f77b5b86afe9f5813e62f

--- a/plat/arm/board/tc/fdts/tc_spmc_optee_sp_manifest.dts
+++ b/plat/arm/board/tc/fdts/tc_spmc_optee_sp_manifest.dts
@@ -116,9 +116,14 @@
 		};
 	};
 
-	/* 32MB of TC_TZC_DRAM1_BASE */
-	memory@fd000000 {
+	memory@0 {
 		device_type = "memory";
-		reg = <0x0 0xfd000000 0x2000000>;
+		reg = <0x0 0xfd000000 0x0 0x2000000>;
+	};
+
+	memory@1 {
+		device_type = "ns-memory";
+		reg = <0x0 0x80000000 0x0 0x79000000>,
+		      <0x80 0x80000000 0x1 0x80000000>;
 	};
 };
