feat(rdv3): add dts files to enable hafnium as bl32
On RD-V3 platform, Hafnium is used as SPMC running at S-EL2 and
manage SP running at S-EL0. Hafnium is loaded and configured as BL32
image. SP is loaded by SP load framework and configured by Hafnium.

Add the dts files needed to enable load and configuration of hafnium and
SP.

Signed-off-by: Nishant Sharma <nishant.sharma@arm.com>
Signed-off-by: Rohit Mathew <rohit.mathew@arm.com>
Change-Id: I7de72052323ff9106d7bedbaaf5ece3272e9a6cd

--- a/plat/arm/board/neoverse_rd/platform/rdv3/fdts/rdv3_tb_fw_config.dts
+++ b/plat/arm/board/neoverse_rd/platform/rdv3/fdts/rdv3_tb_fw_config.dts
@@ -25,4 +25,9 @@
 		mbedtls_heap_addr = <0x0 0x0>;
 		mbedtls_heap_size = <0x0>;
 	};
+
+	secure-partitions {
+		compatible = "arm,sp";
+		#include "rdv3_fw_config_fragment.dts"
+	};
 };
