build(changelog): add new scopes for nxp imx8ulp platform
Add new scopes for NXP i.MX8ULP SoC family.

Signed-off-by: Jacky Bai <ping.bai@nxp.com>
Change-Id: I2fa646fdfa8040ee8142f48e1dfad6f42812d576

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -413,6 +413,9 @@ subsections:
               - title: i.MX 8
                 scope: imx8
 
+              - title: i.MX 8ULP
+                scope: imx8ulp
+
               - title: i.MX 9
                 scope: imx9
 
